// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectHierarchicalMenu routing getWidgetSearchParameters should add the refinements according to the UI state provided 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [
    Object {
      "attributes": Array [
        "category",
        "subCategory",
      ],
      "name": "category",
      "rootPath": null,
      "separator": " > ",
      "showParentLevel": true,
    },
  ],
  "hierarchicalFacetsRefinements": Object {
    "category": Array [
      "path",
    ],
  },
  "index": "",
  "maxValuesPerFacet": 10,
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectHierarchicalMenu routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "hierarchicalMenu": Object {
    "category": Array [
      "path",
    ],
  },
}
`;

exports[`connectHierarchicalMenu routing getWidgetState should not overide other entries in the same namespace 1`] = `
Object {
  "hierarchicalMenu": Object {
    "category": Array [
      "path",
    ],
    "otherCategory": Array [
      "path",
    ],
  },
}
`;
